# rpg

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  RPG.py  rpg.spec
rpg/: __init__.py  package_builder.py  spec.py
rpg/gui/: wizard.py
rpg/plugins/lang/: c.py
rpg/plugins/misc/: files_to_pkgs.py  find_file.py
src/: demo_spec.py  source_loader.py  spec.py
src/gui/: dialogs.py  wizard.py
tests/: CMakeLists.txt  test_functional.py  test_plugins.py  test_spec.py
tests/mock_build/: test_build_libhif.py
tests/unit/: test_command.py  test_functional.py  test_plugins.py
